# IA-OS

./: Dockerfile  README.md  pyproject.toml  rationale.md  setup.py
.github/: example.py
iaosproject/: __init__.py
tests/: __init__.py
