[tool.poetry]
name = "iaosproject"
version = "0.1.0"
description = ""
authors = ["Eduardo Marquina Garcia <eduardo.marquina.garcia@alumnos.upm.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
matplotlib = "^3.7.1"
stopwords = "^1.0.0"
nltk = "^3.8.1"
fitz = "^0.0.1.dev2"
pymupdf = "^1.21.1"
poetry = "^1.4.0"
wordcloud = "^1.8.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
